--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<properties>
 		<java.version>11</java.version>
 	</properties>
-
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -49,5 +49,18 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+    <distributionManagement>
+      <repository>
+        <id>artifactory</id>
+        <name>release</name>
+        <url>http://192.168.44.44:8081/artifactory/libs-release-local</url>
+      </repository>
+      <snapshotRepository>
+        <id>artifactory</id>
+        <name>snapshots</name>
+        <url>http://192.168.44.44:8081/artifactory/libs-snapshot-local</url>
+      </snapshotRepository>
+    </distributionManagement>
 
 </project>
